

2.4xx
	- JabRef can now be extended by plugins (using the Java Plugin Framework JPF as the
	  underlying technology). Currently extension points exist for:
		- ImportFormat
		- ExportFormat based on Templates
		- ExportFormat based on IExportFormat (patch contributed by Kariem Hussein)
		- LayoutFormatter
		- EntryFetcher
		- PushToApplication
	  JabRef uses JPFCodeGenerator (which was written just for JabRef) to generate helper
	  classes for making JPF easier. Current version used: 0.4
	  http://forge.spline.inf.fu-berlin.de/projects/jpfcodegen/
	- Print warnings if insufficient Java version is used or if JRE is not from Sun.
	- Memory Stick Mode: JabRef automatically loads configuration settings from jabref.xml
	  and also writes them there if enabled.
	- Improved handling of crossrefs. Fields are now resolved in preview and export.
	- Updated dependencies, now using: JempBox-0.2
	- Improved handling of ArXiv URIs.
	- [ 1620792 ] Fixed: JabRef randomly hangs during Medline fetch
	- [ 1738920 ] Fixed: Windows Position in Multi-Monitor environment
	- [ 1795355 ] Fixed: LatexFieldFormatter omits "{" on beginning of optional field
	- [ 1297576 ] New feature: Printing of entry preview (use right-click menu)
	- [ 1717849 ] Fixed: Bug in aux import (patch contributed by Kai Eckert)
    - [ 1749613 ] Fixed: About translation
    - [ 1709449 ] Fixed: Clicking a DOI from context menu fails
2.3
    - Added handling of unknown file types when synchronizing the file field.
    - Changed the way customized external file types are stored. Types are now stored in a
      way analogous to a diff from the default types. This allows default types added in later
      versions to appear immediately, even if the user has customized the list.
    - Moved file preferences from General tab to new File tab.
    - Reduced horizontal size of preferences dialog.
    - Fixed handling of quotes when using the "abbr" modifier for key generator (Debian bug
      #448917).