@@ -1,6 +1,7 @@
 
 
 2.4xx
+    - Support for fetching from JSTOR (Tobias Langner and Juliane Doege)
 	- JabRef can now be extended by plugins (using the Java Plugin Framework JPF as the
 	  underlying technology). Currently extension points exist for:
 		- ImportFormat
